--- a/playbooks/1_initial_setup/1_1_file_system_configuration/1_1_9_disable_usb_storage.yml
+++ b/playbooks/1_initial_setup/1_1_file_system_configuration/1_1_9_disable_usb_storage.yml
@@ -5,4 +5,4 @@
     - name: 1.1.9 disable usb storage
       community.general.modprobe:
         name: usb-storage
-        persistent: disable
+        persistent: disabled
