--- a/playbooks/1_initial_setup/1_1_file_system_configuration/1_1_9_disable_usb_storage.yml
+++ b/playbooks/1_initial_setup/1_1_file_system_configuration/1_1_9_disable_usb_storage.yml
@@ -1,8 +1,10 @@
 - name: disable usb storage
   hosts: test
+  become: true
 
   tasks:
     - name: 1.1.9 disable usb storage
       community.general.modprobe:
         name: usb-storage
+        state: absent
         persistent: disabled
